# mask-tool

./: .gitignore  LICENSE  README.md  install-mac.command  install-windows.bat  pyproject.toml  start-mac.command  start-windows.bat
config/: default.yaml  sample_lexicon.yaml  whitelist.yaml
samples/: sample.docx  sample.pptx  sample.xlsx  中信建设2025年上半年投资预算执行情况整体说明-分工.docx  五江项目测算-全周期5年-税前-五江劣后级-20240715v16-减资-参考版.xlsx  关于摘牌霍尔果斯边民互市区运营公司股权项目可行性研究报告.docx  关于阜新市海州煤矿项目调研情况的汇报.docx  阿拉山口边民互市 预沟通反馈问题.docx
src/mask_tool/: __init__.py  __main__.py
src/mask_tool/adapters/: __init__.py  base.py  docx_adapter.py  pdf_adapter.py  pptx_adapter.py  xlsx_adapter.py
src/mask_tool/cli/: __init__.py  app.py
src/mask_tool/core/: __init__.py  confirm.py  detector.py  masker.py  pipeline.py  policy.py  tokenizer.py
src/mask_tool/core/ner/: __init__.py  base.py  jieba_ner.py
src/mask_tool/models/: __init__.py  config.py  detection.py  mapping.py  report.py
src/mask_tool/store/: __init__.py  lexicon.py
src/mask_tool/utils/: __init__.py  logger.py  text.py
src/mask_tool/web/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_detector.py  test_masker.py  test_ner.py  test_policy.py  test_tokenizer.py  test_utils.py
