[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mask-tool"
version = "0.1.0"
description = "本地文件脱敏工具 - 支持可逆脱敏、智能识别、多格式办公文件处理"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ZagooYWX"},
]
keywords = ["desensitization", "masking", "docx", "xlsx", "pptx", "pdf", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pymupdf>=1.24.0",
    "rich>=13.0.0",
    "jieba>=0.42.1",
    "streamlit>=1.28.0",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
    "pandas>=1.4.0",
    "streamlit-aggrid>=0.3.0",
]
ner-hanlp = [
    "hanlp>=2.1.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mask-tool = "mask_tool.cli.app:app"
mask-tool-web = "mask_tool.web.app:run_web"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
